Add path border-width snippet in package

--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
             },
             {
                 "language": "scss",
+                "path": "./snippets/border-width.json"
+            },
+            {
+                "language": "scss",
                 "path": "./snippets/color-brand.json"
             },
             {
