Added spacing snippets

--- a/package.json
+++ b/package.json
@@ -42,6 +42,10 @@
             {
                 "language": "scss",
                 "path": "./snippets/opacity.json"
+            },
+            {
+                "language": "scss",
+                "path": "./snippets/spacing.json"
             }
         ]
     }
