Added line height snippets

--- a/package.json
+++ b/package.json
@@ -41,6 +41,10 @@
             },
             {
                 "language": "scss",
+                "path": "./snippets/line-heigth.json"
+            },
+            {
+                "language": "scss",
                 "path": "./snippets/opacity.json"
             },
             {
