--- a/package.json
+++ b/package.json
@@ -1,60 +1,60 @@
 {
-    "name": "niten-tokens-snippets",
-    "displayName": "niten-tokens-snippets",
-    "description": "Snippets for niten tokens design system",
-    "version": "0.0.1",
-    "engines": {
-        "vscode": "^1.39.0"
-    },
-    "categories": [
-        "Snippets"
-    ],
-    "contributes": {
-        "snippets": [
-            {
-                "language": "scss",
-                "path": "./snippets/border-radius.json"
-            },
-            {
-                "language": "scss",
-                "path": "./snippets/border-width.json"
-            },
-            {
-                "language": "scss",
-                "path": "./snippets/color-brand.json"
-            },
-            {
-                "language": "scss",
-                "path": "./snippets/color-interface.json"
-            },
-            {
-                "language": "scss",
-                "path": "./snippets/font-size.json"
-            },
-            {
-                "language": "scss",
-                "path": "./snippets/font-weight.json"
-            },
-            {
-                "language": "scss",
-                "path": "./snippets/font.json"
-            },
-            {
-                "language": "scss",
-                "path": "./snippets/line-heigth.json"
-            },
-            {
-                "language": "scss",
-                "path": "./snippets/opacity.json"
-            },
-            {
-                "language": "scss",
-                "path": "./snippets/spacing.json"
-            },
-            {
-                "language": "scss",
-                "path": "./snippets/shadows.json"
-            }
-        ]
-    }
+  "name": "niten-tokens-snippets",
+  "displayName": "niten-tokens-snippets",
+  "description": "Snippets for niten tokens design system",
+  "version": "0.0.1",
+  "icon": "images/icon.png",
+  "engines": {
+    "vscode": "^1.39.0"
+  },
+  "categories": [
+    "Snippets"
+  ],
+  "contributes": {
+    "snippets": [{
+        "language": "scss",
+        "path": "./snippets/border-radius.json"
+      },
+      {
+        "language": "scss",
+        "path": "./snippets/border-width.json"
+      },
+      {
+        "language": "scss",
+        "path": "./snippets/color-brand.json"
+      },
+      {
+        "language": "scss",
+        "path": "./snippets/color-interface.json"
+      },
+      {
+        "language": "scss",
+        "path": "./snippets/font-size.json"
+      },
+      {
+        "language": "scss",
+        "path": "./snippets/font-weight.json"
+      },
+      {
+        "language": "scss",
+        "path": "./snippets/font.json"
+      },
+      {
+        "language": "scss",
+        "path": "./snippets/line-heigth.json"
+      },
+      {
+        "language": "scss",
+        "path": "./snippets/opacity.json"
+      },
+      {
+        "language": "scss",
+        "path": "./snippets/spacing.json"
+      },
+      {
+        "language": "scss",
+        "path": "./snippets/shadows.json"
+      }
+    ]
+  }
 }
