Fix path icon extension

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "niten-tokens-snippets",
   "description": "Snippets for niten tokens design system",
   "version": "0.0.1",
-  "icon": "./images/icon.png",
+  "icon": "images/icon.png",
   "publisher": "getninjas",
   "repository": {
     "type": "git",
