fix line-height snippets

--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
       },
       {
         "language": "scss",
-        "path": "./snippets/line-heigth.json"
+        "path": "./snippets/line-height.json"
       },
       {
         "language": "scss",
